--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,13 +1,10 @@
 <!--Materialize Navbar-->
 <nav>
-  <div class="nav-wrapper black">
-    <a href="" class="brand-logo"><i class="material-icons">near_me</i>SmartStock</a>
+  <div class="nav-wrapper green">
+    <a href="" class="brand-logo"><i class="material-icons">healing</i>Sedes Vacunación COVID-19</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="premium">Premium</a></li>
-      <li><a href="user/signup">Sign up</a></li>
-      <li><a href="user/login">Log in</a></li>
-      <li><a href="admin/authorization">Back office</a></li>
-      <li><a href="#"><i class="material-icons">add</i></a></li>
+      <li><a href="admin/authorization">Back office COVID-19</a></li>
+      <li><a href="#"><i class="material-icons">question_answer</i></a></li>
     </ul>
   </div>
 </nav>
@@ -16,33 +13,33 @@
 <router-outlet></router-outlet>
 
 <!--Materialize Footer-->
-<footer class="page-footer black">
+<footer class="page-footer green">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">SmartStock</h5>
-        <p class="grey-text text-lighten-4">Keep & make money!</p>
+        <h5 class="white-text">Vacunación COVID-19</h5>
+        <p class="grey-text text-lighten-4">¡Un espacio seguro!</p>
       </div>
       <div class="col l3 s12">
-        <h5 class="white-text">Product</h5>
+        <h5 class="white-text">¿Que hacemos?</h5>
         <ul>
-          <li><a class="white-text" href="https://eag1eetac.wordpress.com/">Blog</a></li>
-          <li><a class="white-text" href="#!">FAQ</a></li>
+          <li><a class="white-text" href="#!">Blog</a></li>
+          <li><a class="white-text" href="#!">Preguntas</a></li>
         </ul>
       </div>
       <div class="col l3 s12">
-        <h5 class="white-text">Company</h5>
+        <h5 class="white-text">Apoyo</h5>
         <ul>
-          <li><a class="white-text" href="#!">About Us</a></li>
-          <li><a class="white-text" href="#!">Reviews</a></li>
-          <li><a class="white-text" href="#!">Contact</a></li>
+          <li><a class="white-text" href="#!">Sobre Nosotros</a></li>
+          <li><a class="white-text" href="#!">Comentarios</a></li>
+          <li><a class="white-text" href="#!">Contacto</a></li>
         </ul>
       </div>
     </div>
   </div>
   <div class="footer-copyright">
     <div class="container">
-      © 2021 SmartStock
+      © 2021 Sedes Vacunación COVID-19
       <a class="grey-text text-lighten-4 right" href="#!">Support</a>
     </div>
   </div>
