tercer y ultimo commit

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,7 +3,8 @@
   <div class="nav-wrapper green">
     <a href="" class="brand-logo"><i class="material-icons">healing</i>Sedes Vacunación COVID-19</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="admin/authorization">Back office COVID-19</a></li>
+      <li><a href="admin/authorization">BackO user (Proyecto)</a></li>
+      <li><a href="sede">Back office COVID-19</a></li>
       <li><a href="#"><i class="material-icons">question_answer</i></a></li>
     </ul>
   </div>
